--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,5 @@
+@import 'reset';
+
 .App {
   text-align: center;
 }
@@ -9,9 +11,9 @@
 
 .App-header {
   background-color: #222;
+  color: white;
   height: 150px;
   padding: 20px;
-  color: white;
 }
 
 .App-title {
