--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,30 +1,14 @@
 @import 'reset';
 
-.App {
-  text-align: center;
+.container {
+  margin: auto;
+  max-width: 65rem;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.header {
+  font-size: 40px;
 }
 
-.App-header {
-  background-color: #222;
-  color: white;
-  height: 150px;
-  padding: 20px;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.btn {
+  border: 2px solid black;
 }
